Actualizar favicon con emoji cohete 🚀

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GTMate - GTM-as-a-Service for B2B Expansion</title>
     <meta name="description" content="Open your next market with the right GTM partner. We match B2B companies with experienced local sales leaders to launch your go-to-market in weeks, not years." />
