Rebrand: cambiar nombre de GTMate a NEXOR en todas las páginas

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GTMate - GTM-as-a-Service for B2B Expansion</title>
+    <title>NEXOR - GTM-as-a-Service for B2B Expansion</title>
     <meta name="description" content="Open your next market with the right GTM partner. We match B2B companies with experienced local sales leaders to launch your go-to-market in weeks, not years." />
-    <meta name="author" content="GTMate" />
+    <meta name="author" content="NEXOR" />
 
-    <meta property="og:title" content="GTMate - GTM-as-a-Service for B2B Expansion" />
+    <meta property="og:title" content="NEXOR - GTM-as-a-Service for B2B Expansion" />
     <meta property="og:description" content="Open your next market with the right GTM partner. We match B2B companies with experienced local sales leaders to launch your go-to-market in weeks, not years." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
